# peachterm

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  app.cpp  app.hpp  bug.txt  colors.cpp  colors.hpp  exp_scroller.m.cpp  font.m.cpp  fonts.cpp  fonts.hpp  fonts_linux.cpp  fonts_windows.cpp  graphics.cpp  graphics.hpp  io.cpp  io.hpp  io.m.cpp  io_linux.cpp  io_windows.cpp  keyboard.cpp  keyboard.hpp  main.m.cpp  mantest.sh  multi-window-test  parser.cpp  parser.hpp  parser.m.cpp  render-rearchitecture.txt  sample_vim.hpp  scroldown.sh  scrolling.sh  termcell.hpp  termhistory.cpp  termhistory.hpp  test.sh  testplusses.sh  (+7 more)
.github/workflows/: main.yml
cmake/: FindSDL2.cmake  FindSDL2TTF.cmake
